--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blockchain-game",
+  "name": "mortal_war",
   "version": "0.1.0",
-  "description": "Blockchain game template",
-  "author": "gregory@dappuniversity.com",
+  "description": "Mortal War",
+  "author": "huytung139@gmail.com",
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
     "babel-polyfill": "6.26.0",
@@ -15,6 +15,8 @@
     "chai": "4.2.0",
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
+    "gsap": "^3.10.0",
+    "node-sass": "4.14.1",
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
