--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "2.1.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "socket.io-client": "^4.4.1",
     "truffle": "^5.4.32",
     "truffle-flattener": "^1.4.2",
     "web3": "^1.7.0"
