--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
     "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.0",
     "react-scripts": "2.1.3",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "socket.io-client": "^4.4.1",
     "truffle": "^5.4.32",
-    "truffle-flattener": "^1.4.2",
     "web3": "^1.7.0"
   },
   "scripts": {
