--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "Mortal War",
   "author": "huytung139@gmail.com",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -20,14 +19,9 @@
     "react": "16.8.4",
     "react-bootstrap": "1.0.0-beta.5",
     "react-dom": "16.8.4",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "5.2.0",
     "react-scripts": "2.1.3",
     "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "socket.io-client": "^4.4.1",
-    "truffle": "^5.4.32",
-    "web3": "^1.7.0"
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
