--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "mortal_war",
+  "name": "hero_fight",
   "version": "0.1.0",
-  "description": "Mortal War",
+  "description": "Hero Fight",
   "author": "huytung139@gmail.com",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.4.2",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.7.0",
     "babel-preset-es2015": "6.24.1",
